# OGS_ectype

./: README.md
include/: Callback  CopyOp  LogFileHandler.h  Notify  OperationThread
src/: ApplicationUsage.cpp  ArgumentParser.cpp  CMakeLists.txt  Callback.cpp  CopyOp.cpp  DeleteHandler.cpp  LogFileHandler.cpp  Math.cpp  Notify.cpp  Observer.cpp  OperationThread.cpp  Referenced.cpp  Timer.cpp  os_utils.cpp
